bon/tests/integration/ui/compile_fail/generics_setters.stderr
error[E0308]: mismatched types
  --> tests/integration/ui/compile_fail/generics_setters.rs:63:16
   |
63 |         .value(None)
   |          ----- ^^^^ expected `()`, found `Option<_>`
   |          |
   |          arguments to this method are incorrect
   |
   = note: expected unit type `()`
                   found enum `Option<_>`
help: the return type of this call is `Option<_>` due to the type of the argument passed
  --> tests/integration/ui/compile_fail/generics_setters.rs:62:5
   |
62 | /     OptionField::<()>::builder()
63 | |         .value(None)
   | |________________----^
   |                  |
   |                  this argument influences the return type of `value`
note: method defined here
  --> tests/integration/ui/compile_fail/generics_setters.rs:9:5
   |
 6 | #[derive(Builder)]
   |          -------
...
 9 |     value: core::option::Option<T>,
   |     ^^^^^
